# guidra

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: continuous-integration.yml
src/: guidra.glade  main.rs
