[package]
name = "guidra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "^0", features = ["png"] }
capstone = "0.8.0"
hex = "0.4"
lazy_static = "1.4.0"

[dependencies.gtk]
features = ["v3_24"]

[dependencies.keystone]
git = "https://github.com/keystone-engine/keystone"
rev = "c4de98f71f05f356817f5e91fee0d509c7b0b440"  # latest master as of 2019/10/16
